adds custom error handling, creates error logging

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>EWerner_PE_04_Week_05_Metadata</name>
+	<name>dl-exception</name>
 	<comment></comment>
 	<projects>
 	</projects>
